--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,53 @@ libmseed/libmseed.a
 libmseed/libmseed.def
 libmseed/libmseed.lib
 libmseed/ms_test/ms_test.ilk
+ThirdParty/
+gem.opensdf
+gem.sdf
+gem.sln
+googletest.vcxproj.filters
+libmseed/ALL_BUILD.vcxproj
+libmseed/ALL_BUILD.vcxproj.filters
+googletest.vcxproj
+core/core.vcxproj.filters
+libmseed/CMakeFiles/
+core.tests/core.tests.dir/
+logger/jpslogd.dir/
+logger/logger.dir/
+libmseed/libmseed.dir/
+CMakeFiles/
+common/common.dir/
+ALL_BUILD.vcxproj
+common.tests/common.tests.dir/
+common.tests/common.tests.sln
+cmake_install.cmake
+RUN_TESTS.vcxproj
+RUN_TESTS.vcxproj.filters
+ALL_BUILD.vcxproj.filters
+common.tests/common.tests.vcxproj
+common.tests/common.tests.vcxproj.filters
+common/common.vcxproj.filters
+logger/logger.vcxproj
+build/
+logger/logger.sln
+core.tests/core.tests.sln
+core.tests/core.tests.vcxproj
+core.tests/core.tests.vcxproj.filters
+logger/jpslogd.vcxproj.filters
+logger/logger.vcxproj.filters
+logger/jpslogd.vcxproj
+core/core.dir/
+Win32/
+ZERO_CHECK.vcxproj.filters
+ZERO_CHECK.vcxproj
+libmseed/libmseed.vcxproj.filters
+libmseed/libmseed.vcxproj.user
+CMakeCache.txt
+libmseed/libmseed.vcxproj
+CTestTestfile.cmake
+libmseed/libmseed.sln
+common/common.sln
+common/common.vcxproj
+core/core.sln
+core/core.vcxproj
+libmseed/_pack.c.zxc
