--- a/logger/config.ini
+++ b/logger/config.ini
@@ -1,26 +1,4 @@
 [General]
-
-; LocalDatabase.Driver=QMYSQL
-; LocalDatabase.DatabaseName=world
-; LocalDatabase.Username=root
-; LocalDatabase.Password=ifzru
-; LocalDatabase.Hostname=127.0.0.1
-; LocalDatabase.Port=3306
-
-; Db.Driver=QMYSQL
-; Db.DatabaseName=gnss_DEVE
-; Db.Username=root
-; Db.Password=2548997
-; Db.Hostname=ipg90.geospace.ru
-; Db.Port=3307
-
-; DataCenterDatabase.Driver=QMYSQL
-; DataCenterDatabase.DatabaseName=world_data_center
-; DataCenterDatabase.Username=root
-; DataCenterDatabase.Password=ifzru
-; DataCenterDatabase.Hostname=127.0.0.1
-; DataCenterDatabase.Port=3306
-
 LogLevel=5
 LocalDatabase.Driver=QMYSQL
 LocalDatabase.DatabaseName=jpslogd
@@ -29,14 +7,15 @@ LocalDatabase.Password=
 LocalDatabase.Hostname=127.0.0.1
 LocalDatabase.Port=3306
 WrapIntoTransaction=true
-inserterBatchSize=25
-rawDataLogFile=jpsRawDataStream.txt
-PortName=/dev/ttyUSB0
-BaudRate=115200
-ResponseTimeout=10
-ProcessName=/opt/jpsutils/jpslogd
-rawDataLogFile=jpsRawDataStream.txt
-
-[Receiver]
-command1="set,/par/lock/elm,10\n"
-command2="em,,def:{30,0}\n"
+[mseed]
+filename=convFile
+network=RU
+station=IFZ
+location=SK
+writeType=0
+channel1=BHZ
+channel2=BHE
+channel3=BHS
+channel4=BHN
+channel5=BHW
+channel6=BLZ
