--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -4,7 +4,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 SET(PROJECT core)
 
-SET(DEPENDS_ON_PROJECTS common libmseed)
+SET(DEPENDS_ON_PROJECTS common libmseed mongoose)
 
 FILE(GLOB_RECURSE HEADERS "${PROJECT}/*.h")
 FILE(GLOB ROOT_HEADERS "${PROJECT}/*.h")
