source files move

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -6,11 +6,11 @@ SET(PROJECT core)
 
 SET(DEPENDS_ON_PROJECTS common libmseed mongoose)
 
-FILE(GLOB_RECURSE HEADERS "${PROJECT}/*.h")
-FILE(GLOB ROOT_HEADERS "${PROJECT}/*.h")
+FILE(GLOB_RECURSE HEADERS "*.h")
+FILE(GLOB ROOT_HEADERS "*.h")
 
-FILE(GLOB_RECURSE SOURCES "src/*.cpp")
-FILE(GLOB ROOT_SOURCES "src/*.cpp")
+FILE(GLOB_RECURSE SOURCES "*.cpp")
+FILE(GLOB ROOT_SOURCES "*.cpp")
 
 FILE(GLOB_RECURSE MOC_SOURCES "*_automoc.cpp")
 
