--- a/gemlogd/CMakeLists.txt
+++ b/gemlogd/CMakeLists.txt
@@ -30,6 +30,7 @@ foreach(DEPENDENCY ${DEPENDS_ON_PROJECTS})
 	include_directories("../${DEPENDENCY}")
 endforeach()
 
+include_directories("..")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT}")
 
