added mini-seed logging, config and runner usage

--- a/gemlogd/config.ini
+++ b/gemlogd/config.ini
@@ -1,23 +1,13 @@
 [General]
-LogLevel=5
-LocalDatabase.Driver=QMYSQL
-LocalDatabase.DatabaseName=jpslogd
-LocalDatabase.Username=jpslogd
-LocalDatabase.Password=
-LocalDatabase.Hostname=127.0.0.1
-LocalDatabase.Port=3306
-WrapIntoTransaction=true
+logLevel=5
 [mseed]
-filename=convFile
+fileName=convFile
 network=RU
 station=IFZ
 location=SK
-writeType=0
-channel1=BHZ
-channel2=BHE
-channel3=BHS
-channel4=BHN
-channel5=BHW
-channel6=BLZ
 [device]
 portName=/dev/ttyUSB0
+[webServer]
+port=8000
+[runner]
+samplesCacheMaxSize=2
