--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,15 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-shell": "^1.1.2"
+  },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -12,6 +21,8 @@
     "express": "~4.13.1",
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "fs.extra": "^1.3.2",
+    "underscore": "^1.8.3"
   }
 }
