js compilation: checked

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ web/public/styles/generated.css
 web/public/styles/generated.css.map
 web/.idea/
 web/bower_components/
+web/public/js/compiled/Init.js
