--- a/web/package.json
+++ b/web/package.json
@@ -19,10 +19,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "fs.extra": "^1.3.2",
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
+    "request": "^2.64.0",
     "serve-favicon": "~2.3.0",
-    "fs.extra": "^1.3.2",
     "underscore": "^1.8.3"
   }
 }
