--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,10 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-cssmin": "^0.13.0",
-    "grunt-shell": "^1.1.2"
+    "grunt-shell": "^1.1.2",
+    "grunt-postcss": "^0.6.0",
+    "cssnano": "^3.2.0",
+    "autoprefixer": "^6.0.3"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
