--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-sass": "^1.0.0",
     "grunt-shell": "^1.1.2",
     "grunt-postcss": "^0.6.0",
     "cssnano": "^3.2.0",
