--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,13 +65,13 @@ FIND_PACKAGE(Qt5Sql)
 FIND_PACKAGE(Qt5Network)
 FIND_PACKAGE(Qt5SerialPort)
 
-## Boost
+## Boost (disabled)
 
-SET(Boost_USE_STATIC_LIBS ON)
-SET(Boost_USE_MULTITHREADED ON)
-FIND_PACKAGE(Boost COMPONENTS regex system thread REQUIRED)
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
-ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
+# SET(Boost_USE_STATIC_LIBS ON)
+# SET(Boost_USE_MULTITHREADED ON)
+# FIND_PACKAGE(Boost COMPONENTS regex system thread REQUIRED)
+# INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+# ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
 
 ## GTest
 
