--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -38,7 +38,7 @@ SET_TARGET_PROPERTIES(${PROJECT} PROPERTIES LINKER_LANGUAGE CXX)
 target_link_libraries(
     ${PROJECT}
     ${DEPENDS_ON_PROJECTS}
-    ${Boost_LIBRARIES}
+#   ${Boost_LIBRARIES}
     Qt5::Core
     debug ${GTEST_DEBUG_LIBS}
     optimized ${GTEST_RELEASE_LIBS}
