--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -1,12 +1,25 @@
 {
-  "parser": "babel-eslint",
-  "extends": "airbnb",
-  "globals": {
-    "__DEV__": true
-  },
-  "rules": {
-    "react/jsx-quotes": 0,
-    "jsx-quotes": [2, "prefer-double"],
-    "indent": [2, 4, { "SwitchCase": 1, "VariableDeclarator": 1 }]
-  }
+    "parser": "babel-eslint",
+    "extends": "airbnb",
+    "globals": {
+        "__DEV__": true
+    },
+    "rules": {
+        "react/jsx-quotes": 0,
+        "jsx-quotes": [2, "prefer-double"],
+        "indent": [2, 4, { "SwitchCase": 1, "VariableDeclarator": 1 }],
+        "prefer-arrow-callback": 0,
+        "comma-dangle": 0,
+        "func-names": 0,
+        "spaced-comment": 0,
+        "prefer-const": 0,
+        "strict": 0,
+        "object-shorthand": 0,
+        "no-unused-vars": 0,
+        "max-len": [2, 160, 4, {
+            "ignoreUrls": true,
+            "ignoreComments": false
+        }],
+        "array-bracket-spacing": [2, "never"]
+    }
 }
