--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -14,6 +14,7 @@
         "spaced-comment": 0,
         "prefer-const": 0,
         "strict": 0,
+        "arrow-body-style": 0,
         "object-shorthand": 0,
         "no-unused-vars": 0,
         "max-len": [2, 160, 4, {
