--- a/web/package.json
+++ b/web/package.json
@@ -1,75 +1,81 @@
 {
-    "name": "gem-web",
-    "version": "1.0.0",
-    "description": "IPS RAS remote magnetometer control system",
-    "private": true,
-    "scripts": {
-        "start": "gulp start",
-        "deploy": "gulp deploy",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Stepan Burguchev",
-    "license": "MIT",
-    "devDependencies": {
-        "autoprefixer": "^6.3.3",
-        "babel-cli": "^6.5.1",
-        "babel-core": "^6.3.17",
-        "babel-eslint": "^5.0.0",
-        "babel-loader": "^6.2.0",
-        "babel-plugin-react-transform": "^2.0.0",
-        "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
-        "babel-plugin-transform-react-constant-elements": "^6.5.0",
-        "babel-plugin-transform-react-remove-prop-types": "^0.2.2",
-        "babel-plugin-transform-runtime": "^6.3.13",
-        "babel-preset-es2015": "^6.3.13",
-        "babel-preset-react": "^6.3.13",
-        "babel-preset-stage-0": "^6.3.13",
-        "babel-register": "^6.3.13",
-        "babel-runtime": "^6.3.19",
-        "browser-sync": "^2.11.1",
-        "css-loader": "^0.23.1",
-        "eslint": "^2.2.0",
-        "eslint-config-airbnb": "^6.0.2",
-        "eslint-loader": "^1.3.0",
-        "eslint-plugin-react": "^4.1.0",
-        "exports-loader": "^0.6.3",
-        "extract-text-webpack-plugin": "^1.0.1",
-        "file-loader": "^0.8.5",
-        "gulp": "^3.9.0",
-        "gulp-util": "^3.0.7",
-        "html-webpack-plugin": "^2.9.0",
-        "imports-loader": "^0.6.5",
-        "json-loader": "^0.5.4",
-        "node-sass": "^3.4.2",
-        "postcss-loader": "^0.8.1",
-        "react-transform-catch-errors": "^1.0.2",
-        "react-transform-hmr": "^1.0.2",
-        "redbox-react": "^1.2.2",
-        "redux-devtools": "^3.0.0",
-        "sass-loader": "^3.1.2",
-        "style-loader": "^0.13.0",
-        "url-loader": "^0.5.7",
-        "webpack": "^1.12.13",
-        "webpack-dev-middleware": "^1.5.1",
-        "webpack-hot-middleware": "^2.7.1"
-    },
-    "dependencies": {
-        "body-parser": "~1.13.2",
-        "cookie-parser": "~1.3.5",
-        "debug": "~2.2.0",
-        "express": "~4.13.1",
-        "hbs": "~3.1.0",
-        "morgan": "~1.6.1",
-        "react": "^0.14.7",
-        "react-dom": "^0.14.7",
-        "react-redux": "^4.4.0",
-        "react-router": "^2.0.0",
-        "react-router-redux": "^3.0.0",
-        "redux": "^3.3.1",
-        "redux-thunk": "^1.0.3",
-        "request": "^2.64.0",
-        "serve-favicon": "~2.3.0",
-        "react-tap-event-plugin": "^0.2.2",
-        "underscore": "^1.8.3"
-    }
+  "name": "gem-web",
+  "version": "1.0.0",
+  "description": "IPS RAS remote magnetometer control system",
+  "private": true,
+  "scripts": {
+    "start": "gulp start",
+    "deploy": "gulp deploy",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Stepan Burguchev",
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^6.3.3",
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.3.17",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
+    "babel-plugin-transform-react-constant-elements": "^6.5.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.2",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "babel-runtime": "^6.3.19",
+    "browser-sync": "^2.11.1",
+    "css-loader": "^0.23.1",
+    "eslint": "^2.2.0",
+    "eslint-config-airbnb": "^6.0.2",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.1.0",
+    "exports-loader": "^0.6.3",
+    "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "gulp": "^3.9.0",
+    "gulp-util": "^3.0.7",
+    "html-webpack-plugin": "^2.9.0",
+    "imports-loader": "^0.6.5",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.1",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.2",
+    "redbox-react": "^1.2.2",
+    "redux-devtools": "^3.0.0",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.13",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.7.1"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.6",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "font-awesome": "^4.5.0",
+    "hbs": "~3.1.0",
+    "jquery": "^2.2.1",
+    "metismenu": "^2.4.0",
+    "morgan": "~1.6.1",
+    "morris.js": "^0.5.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^3.0.0",
+    "react-tap-event-plugin": "^0.2.2",
+    "redux": "^3.3.1",
+    "redux-thunk": "^1.0.3",
+    "request": "^2.64.0",
+    "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3"
+  }
 }
