--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -13,14 +13,16 @@
         "func-names": 0,
         "spaced-comment": 0,
         "prefer-const": 0,
+        "space-before-function-paren": 0,
+        "array-bracket-spacing": 0,
         "strict": 0,
         "arrow-body-style": 0,
         "object-shorthand": 0,
+        "no-useless-constructor": 0,
         "no-unused-vars": 0,
         "max-len": [2, 160, 4, {
             "ignoreUrls": true,
             "ignoreComments": false
-        }],
-        "array-bracket-spacing": [2, "never"]
+        }]
     }
 }
