--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -15,14 +15,18 @@
         "prefer-const": 0,
         "space-before-function-paren": 0,
         "array-bracket-spacing": 0,
+        "object-curly-spacing": 0,
         "strict": 0,
         "arrow-body-style": 0,
         "object-shorthand": 0,
         "no-useless-constructor": 0,
+        "no-trailing-spaces": 0,
         "no-unused-vars": 0,
         "max-len": [2, 160, 4, {
             "ignoreUrls": true,
             "ignoreComments": false
-        }]
+        }],
+        "react/jsx-indent-props": 0,
+        "react/jsx-closing-bracket-location": 0
     }
 }
