--- a/web/package.json
+++ b/web/package.json
@@ -65,6 +65,7 @@
     "hbs": "~3.1.0",
     "jquery": "^2.2.1",
     "metismenu": "^2.4.0",
+    "moment": "^2.11.2",
     "morgan": "~1.6.1",
     "morris.js": "^0.5.0",
     "react": "^0.14.7",
