--- a/web/package.json
+++ b/web/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.6",
+    "bootstrap-select": "^1.10.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
@@ -68,6 +69,7 @@
     "moment": "^2.11.2",
     "morgan": "~1.6.1",
     "morris.js": "^0.5.0",
+    "raphael": "^2.1.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
