--- a/web/package.json
+++ b/web/package.json
@@ -65,6 +65,7 @@
     "font-awesome": "^4.5.0",
     "hbs": "~3.1.0",
     "jquery": "^2.2.1",
+    "lodash": "^4.6.1",
     "metismenu": "^2.4.0",
     "moment": "^2.11.2",
     "morgan": "~1.6.1",
@@ -74,12 +75,15 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
-    "react-router-redux": "^3.0.0",
+    "react-router-redux": "^4.0.0",
     "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.3.1",
+    "redux-devtools": "^3.1.1",
+    "redux-devtools-dock-monitor": "^1.1.0",
+    "redux-devtools-log-monitor": "^1.0.5",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.3",
     "request": "^2.64.0",
-    "serve-favicon": "~2.3.0",
-    "underscore": "^1.8.3"
+    "serve-favicon": "~2.3.0"
   }
 }
