--- a/web/package.json
+++ b/web/package.json
@@ -64,6 +64,7 @@
     "express": "~4.13.1",
     "font-awesome": "^4.5.0",
     "hbs": "~3.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
     "metismenu": "^2.4.0",
@@ -82,7 +83,7 @@
     "redux-devtools-dock-monitor": "^1.1.0",
     "redux-devtools-log-monitor": "^1.0.5",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^1.0.3",
+    "redux-thunk": "^2.0.1",
     "request": "^2.64.0",
     "serve-favicon": "~2.3.0"
   }
